--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,6 @@ jobs:
               env:
                   NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
-            - run: pnpm publish --access public
+            - run: pnpm publish --access public --no-git-checks
               env:
                   NPM_TOKEN: ${{secrets.NPM_TOKEN}}
