--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
         "skipLibCheck": true,
         "types": ["vite/client", "node"]
     },
-    "include": ["src"]
+    "include": ["src", "playground"]
 }
