fix: 修复 es 模块不能 tree-shaking 的问题 (#9)

--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "license": "MIT",
     "author": "Fansy <418536538@qq.com>",
     "devDependencies": {
+        "@babel/core": "^7.19.1",
+        "@babel/plugin-syntax-import-meta": "^7.10.4",
+        "@babel/plugin-transform-typescript": "^7.19.1",
         "@fansy/eslint-config": "^1.0.0",
         "@fansy/prettier-config": "^1.0.0",
         "@types/markdown-it": "^12.2.3",
         "@types/node": "^18.7.18",
         "@vitejs/plugin-vue": "^3.1.0",
-        "@vitejs/plugin-vue-jsx": "^2.0.1",
+        "@vue/babel-plugin-jsx": "^1.1.1",
         "rimraf": "^3.0.2",
         "vite": "^3.1.1",
         "vite-plugin-dts": "^1.5.0",
